[gd_scene load_steps=33 format=2]

[ext_resource path="res://src/objects/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/top_face_2_2.png" type="Texture" id=2]
[ext_resource path="res://assets/player/front_face_3_2.png" type="Texture" id=3]
[ext_resource path="res://assets/player/side_face_3_1.png" type="Texture" id=4]
[ext_resource path="res://assets/player/front_face_2_1.png" type="Texture" id=5]
[ext_resource path="res://assets/player/front_face_4.png" type="Texture" id=6]
[ext_resource path="res://assets/player/front_face_6_1.png" type="Texture" id=7]
[ext_resource path="res://assets/player/top_face_2_1.png" type="Texture" id=8]
[ext_resource path="res://assets/player/top_face_1.png" type="Texture" id=9]
[ext_resource path="res://assets/player/side_face_2_1.png" type="Texture" id=10]
[ext_resource path="res://assets/player/side_face_6_1.png" type="Texture" id=11]
[ext_resource path="res://assets/player/top_face_6_2.png" type="Texture" id=12]
[ext_resource path="res://assets/player/side_face_4.png" type="Texture" id=13]
[ext_resource path="res://assets/player/top_face_4.png" type="Texture" id=14]
[ext_resource path="res://assets/player/side_face_2_2.png" type="Texture" id=15]
[ext_resource path="res://assets/player/top_face_6_1.png" type="Texture" id=16]
[ext_resource path="res://assets/player/side_face_3_2.png" type="Texture" id=17]
[ext_resource path="res://assets/player/front_face_1.png" type="Texture" id=18]
[ext_resource path="res://assets/player/side_face_5.png" type="Texture" id=19]
[ext_resource path="res://assets/player/front_face_5.png" type="Texture" id=20]
[ext_resource path="res://assets/player/top_face_5.png" type="Texture" id=21]
[ext_resource path="res://assets/player/side_face_6_2.png" type="Texture" id=22]
[ext_resource path="res://assets/player/top_face_3_1.png" type="Texture" id=23]
[ext_resource path="res://assets/player/top_face_3_2.png" type="Texture" id=24]
[ext_resource path="res://assets/player/front_face_3_1.png" type="Texture" id=25]
[ext_resource path="res://assets/player/front_face_6_2.png" type="Texture" id=26]
[ext_resource path="res://assets/player/side_face_1.png" type="Texture" id=27]
[ext_resource path="res://assets/player/front_face_2_2.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "3_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "3_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "6_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "2_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "2_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "6_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "3_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "3_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "6_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "2_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "2_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "6_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "3_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "3_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "6_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "2_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "2_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "6_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 7 )

[node name="Player" type="Area2D"]
collision_mask = 0
monitoring = false
script = ExtResource( 1 )

[node name="FrontFace" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "2_1"

[node name="SideFace" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "6_2"

[node name="TopFace" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "4"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17 )
shape = SubResource( 4 )
